fixing z-index of comments

--- a/my-app/src/FrontPage.css
+++ b/my-app/src/FrontPage.css
@@ -190,3 +190,8 @@ body {
 .like-button, .post-button {
   cursor: pointer;
 }
+
+.comment-box {
+  z-index: 10;
+  position: relative;
+}
